--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -20,8 +20,8 @@
         <div class="form-group">
             <label for="role">Роль:</label>
             <select id="role" name="role" class="form-control" required>
-                <option value="USER">Пользователь</option>
-                <option value="ADMIN">Администратор</option>
+                <option value="ROLE_USER">Пользователь</option>
+                <option value="ROLE_ADMIN">Администратор</option>
             </select>
         </div>
         <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
